@@ -26,7 +26,6 @@ import static org.powermock.api.mockito.PowerMockito.mockStatic;
 import static org.powermock.api.mockito.PowerMockito.spy;
 import static org.powermock.api.mockito.PowerMockito.verifyStatic;
 
-import org.junit.Ignore;
 import org.junit.Rule;
 import org.junit.Test;
 import org.mockito.exceptions.base.MockitoAssertionError;
@@ -41,7 +40,6 @@ import samples.singleton.StaticService;
 /**
  * Test class to demonstrate static mocking with PowerMockito.
  */
-@Ignore
 @PrepareForTest( { StaticService.class, StaticHelper.class })
 public class MockStaticTest {
     @Rule
